service1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001
  selector:
    app: service1
