service4-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service4
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30004
  selector:
    app: service4
