service4-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service4-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: service4.default.svc.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service4
            port:
              number: 8080
